crates/vigil-core/src/snapshots/vigil_core__tests__run_query_department_grouping_having.snap
---
source: crates/vigil-core/src/tests.rs
expression: "db.run_query(include_str!(\"./resources/department-grouping-having.eql\")).unwrap().collect::<EvalResult<Vec<_>>>()"
---
Ok:
  - Record:
      avgSalary:
        Number: 97666.66666666667
      department:
        String: engineering
      employeeCount:
        Number: 3
