crates/vigil-core/src/snapshots/vigil_core__tests__simple_sub_query.snap
---
source: crates/vigil-core/src/tests.rs
expression: "db.run_query(include_str!(\"./resources/simple-sub-query.eql\")).unwrap().collect::<EvalResult<Vec<_>>>()"
---
Ok:
  - Record:
      average:
        Number: 96000
      name:
        String: NYC Employee Average Salary
